<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SettingsActivity"
        android:background="@drawable/background">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_margin="30sp"
            android:layout_width="0dp"
            app:layout_constraintWidth_max="400sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:text="@string/settings"
                android:textSize="30sp"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"/>

        <TextView
                android:layout_marginTop="20sp"
                android:text="@string/language_selector"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/language_selector_label"
                app:layout_constraintTop_toBottomOf="@+id/title"
                app:layout_constraintStart_toStartOf="parent"/>
        <androidx.appcompat.widget.AppCompatSpinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/language_selector_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/language_selector"/>

        <TextView
                android:layout_marginTop="10sp"
                android:text="@string/app_theme_selector"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/theme_selector_label"
                app:layout_constraintTop_toBottomOf="@+id/language_selector"
                app:layout_constraintStart_toStartOf="parent"/>
        <androidx.appcompat.widget.AppCompatSpinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/theme_selector_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/theme_selector"/>

        <TextView
                android:layout_marginTop="10sp"
                android:text="@string/output_color_selector"
                android:textAlignment="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/output_color_selector_label"
                app:layout_constraintTop_toBottomOf="@+id/theme_selector"
                app:layout_constraintStart_toStartOf="parent"/>
        <androidx.appcompat.widget.AppCompatSpinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/output_color_selector_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/output_color_selector"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/desktopModeSwitch"
                android:text="@string/desktop_mode"
                android:textSize="15sp"
                android:layout_marginTop="15sp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/output_color_selector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        <Button
                android:text="@string/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:backgroundTint="@color/neutral90"
                app:layout_constraintTop_toBottomOf="@id/desktopModeSwitch"
                android:id="@+id/save_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>