<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".LatexEditor">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/mainLayout">

        <TextView
                android:text="@string/latex_editor"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:id="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:gravity="start|top"
                android:ems="10"
                android:id="@+id/editTexCode"
                android:autofillHints="latex code"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
                android:enabled="false"
                android:text="@string/steganography"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/integrateSteganography"
                app:layout_constraintTop_toBottomOf="@+id/editTexCode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>


        <ImageView
                android:id="@+id/texView"
                android:scaleType="centerInside"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="15dp"
                app:layout_constraintTop_toBottomOf="@+id/integrateSteganography"
                app:layout_constraintBottom_toTopOf="@id/buttonLayout"
                android:background="@color/white"
                android:contentDescription="@string/texViewDesc" />

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_margin="10sp"
                app:layout_constraintBottom_toBottomOf="@id/mainLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonLayout">

            <Button
                    android:text="@string/copy_image"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/copy"
                    app:layout_constraintBaseline_toBaselineOf="@+id/paste"
                    app:layout_constraintEnd_toStartOf="@+id/paste"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="15dp"/>
            <Button
                    android:enabled="false"
                    android:text="@string/paste_image"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/paste"
                    android:layout_marginTop="15dp"
                    app:layout_constraintBaseline_toBaselineOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/copy"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="5dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>